# python-auth_api

./: docker-compose.yml  pyproject.toml
auth/: database.py  main.py  models.py  schemas.py
auth/routers/: user.py
